--- a/src/style.css
+++ b/src/style.css
@@ -197,3 +197,26 @@ input[type='checkbox'] {
     transform: rotate(359deg);
   }
 }
+
+/* my-bids */
+.nft-img {
+    border-radius: 5px;
+}
+
+.myBids-container { 
+    margin: 10px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.bidCard {
+    text-align: center;
+    margin: 10px;
+    box-shadow: 0px 2px 4px 2px grey;
+    border-radius: 5px;
+}
+
+.bidCard > h4 {
+    margin: 5px 0px;
+}
