--- a/src/style.css
+++ b/src/style.css
@@ -220,3 +220,36 @@ input[type='checkbox'] {
 .bidCard > h4 {
     margin: 5px 0px;
 }
+
+/* home page */
+.homeWrapper {
+    display: flex;
+    align-items: center;    
+    height: calc(100vh - 50px);
+    margin: 0px 50px ;
+}
+
+.homeWrapper > h1 {
+    margin: 10px;
+    font-size: 50px;
+    word-break: break-word;
+    text-align: inherit;
+}
+
+.homeWrapper > h1 > span {
+    font-style: italic;
+    text-decoration: underline;
+    background-color: antiquewhite;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .homeWrapper {
+        flex-direction: column;
+        margin: 0px;
+    }
+    .homeWrapper > h1 {
+        font-size: 35px;
+    }
+
+}
